modify fake pay payin function to return redirect URL
