# psp/requests.go
@@ -1,5 +1,12 @@
 package psp
 
+type PayInRequest struct {
+	TransactionID      string
+	Amount             float64
+	ConfirmCallbackURL string
+	CancelCallbackURL  string
+}
+
 type ConfirmRequest struct {
 	TransactionID string `json:"transaction_id" binding:"required"`
 }
